fix vertical alignment in homescreen

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -173,7 +173,7 @@
 }
 
 .custom-mid-page-header-margin {
-  margin-top: 3px;
+  margin-top: 4px;
 }
 .custom-enterprise-container {
   margin-bottom: -61px;
